fix: remove body styles and dark mode colors

--- a/src/global.scss
+++ b/src/global.scss
@@ -25,11 +25,6 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-body {
-  color: #000;
-  background-color: #fff;
-}
-
 .over-background {
   z-index: 1;
 }
